--- a/UI-Weather-I.xcodeproj/xcshareddata/xcschemes/UI-Weather-I.xcscheme
+++ b/UI-Weather-I.xcodeproj/xcshareddata/xcschemes/UI-Weather-I.xcscheme
@@ -27,7 +27,8 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      language = "en">
+      language = "en"
+      codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
             skipped = "NO"
